fixing nav padding on mobile

--- a/frontend/src/components/nav/styles/nav.scss
+++ b/frontend/src/components/nav/styles/nav.scss
@@ -67,14 +67,13 @@ $mobile-nav-background-lightgreen: #cdf0c2;
     box-shadow: 0px 0px 2px 0px #1a5e208c;
     padding-left: 2.5vmin;
     padding-right: 2.5vmin;
+  }
 
-    button {
-      padding-top: 0px;
-      padding-bottom: 0px;
-    }
+  button {
+    font-size: 0.8em;
   }
 
   .nav-right {
-    gap: 2vmin;
+    gap: 1vmin;
   }
 }
